--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,2 +1,3 @@
 [secrets]
 GROQ_API_KEY = "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"
+HUGGINGFACEHUB_API_TOKEN = "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"
