--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 PyMuPDF
 streamlit
-langchain==0.1.14
-langchain-community==0.0.32
-langchain-core==0.1.47
+langchain
+langchain-community
+langchain-core
 langchain-groq
-chromadb==0.3.21
+chromadb
 openai
 groq
-transformers==4.38.2
+transformers
 torch
-sentence-transformers==2.6.1
-pydantic==1.10.13
+sentence-transformers
+i have already added like this
