--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ streamlit
 PyMuPDF
 openai
 groq
-langchain==0.1.14
+langchain==0.1.13
 langchain-community==0.0.32
 langchain-core==0.1.47
 langchain-groq
@@ -11,4 +11,4 @@ transformers==4.38.2
 torch
 sentence-transformers==2.6.1
 pydantic==1.10.13
-langsmith>=0.1.17,<0.2.0
+langsmith==0.0.65
