--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,12 @@
-streamlit
-PyMuPDF
-openai
-groq
-langchain==0.1.13
+streamlit==1.32.2
+PyMuPDF==1.23.9
+langchain==0.1.14
 langchain-community==0.0.32
 langchain-core==0.1.47
-langchain-groq
+langchain-groq==0.0.1
 chromadb==0.3.21
-transformers==4.38.2
-torch
 sentence-transformers==2.6.1
+transformers==4.38.2
+torch==2.2.1
 pydantic==1.10.13
-langsmith==0.0.65
+langsmith>=0.1.17,<0.2.0
