--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,5 @@ chromadb==0.3.21
 sentence-transformers==2.6.1
 transformers==4.38.2
 torch==2.2.1
-pydantic==1.10.13
+pydantic>=2.5,<3.0
 langsmith>=0.1.17,<0.2.0
