--- a/requirements.txt
+++ b/requirements.txt
@@ -13,5 +13,5 @@ lz4==4.3.2
 sentence-transformers==2.6.1
 transformers==4.38.2
 torch==2.2.1
-pydantic>=2.5,<3.0
+pydantic==1.10.13
 langsmith>=0.1.17,<0.2.0
