--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,12 @@
-streamlit==1.32.2
-PyMuPDF==1.23.9
+faiss-cpu==1.7.3
 openai
-groq
 langchain==0.1.14
 langchain-community==0.0.32
 langchain-core==0.1.47
-langchain-groq==0.0.1
+langchain-groq
 chromadb==0.3.21
-hnswlib==0.8.0
-uvicorn==0.29.0
-lz4==4.3.2
-sentence-transformers==2.6.1
 transformers==4.38.2
-torch==2.2.1
+torch
+sentence-transformers==2.6.1
 pydantic==1.10.13
 langsmith>=0.1.17,<0.2.0
