--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ langchain==0.1.14
 langchain-community==0.0.32
 langchain-core==0.1.47
 langchain-groq
-chromadb==0.3.21
+chromadb>=0.4.0  # Upgrade chromadb
 transformers==4.38.2
 torch
 sentence-transformers==2.6.1
