--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 faiss-cpu==1.7.3
 langchain==0.1.14
-langchain-community==0.0.30  # Try an older version
+langchain-community==0.0.20  # Try this older version
 langchain-core==0.1.47
 langchain-groq
-chromadb==0.3.10
+chromadb==0.3.21  # Revert to the version that gave the 'upsert' error
 transformers==4.38.2
 torch
 sentence-transformers==2.6.1
